crates/ty_python_semantic/resources/mdtest/snapshots/methods.md_-_Methods_-_`@classmethod`_-_`__init_subclass__`_-_Basics_(a1fb03132e42b69e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: methods.md - Methods - `@classmethod` - `__init_subclass__` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/call/methods.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Base:
 2 |     def __init_subclass__(cls, **kwargs):
 3 |         super().__init_subclass__(**kwargs)
 4 |         cls.custom_attribute: int = 0
 5 | 
 6 | class Derived(Base):
 7 |     pass
 8 | 
 9 | reveal_type(Derived.custom_attribute)  # revealed: int
10 | class Empty: ...
11 | 
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
14 | 
15 | class NoArg:
16 |     def __init_subclass__(cls): ...
17 | 
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
22 | 
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
26 |     a = 1
27 |     b = 2
28 |     c = 3
29 |     d = 4
30 |     e = 5
31 |     f = 6
32 |     g = 7
33 |     h = 8
34 |     i = 9
35 |     j = 10
```

# Diagnostics

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:19:1
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[invalid-argument-type]: Argument to function `__init_subclass__` is incorrect
  --> src/mdtest_snippet.py:20:1
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected `int`, found `Literal["foo"]`
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Function defined here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^      -------- Parameter declared here
14 |
15 | class NoArg:
   |

```

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:1
   |
23 |   # error: [missing-argument]
24 |   # error: [unknown-argument]
25 | / class IncorrectArg(RequiresArg, not_arg="foo"):
26 | |     a = 1
27 | |     b = 2
28 | |     c = 3
29 | |     d = 4
30 | |     e = 5
31 | |     f = 6
32 | |     g = 7
33 | |     h = 8
34 | |     i = 9
35 | |     j = 10
   | |__________^
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[unknown-argument]: Argument `not_arg` does not match any known parameter of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:1
   |
23 |   # error: [missing-argument]
24 |   # error: [unknown-argument]
25 | / class IncorrectArg(RequiresArg, not_arg="foo"):
26 | |     a = 1
27 | |     b = 2
28 | |     c = 3
29 | |     d = 4
30 | |     e = 5
31 | |     f = 6
32 | |     g = 7
33 | |     h = 8
34 | |     i = 9
35 | |     j = 10
   | |__________^
   |
info: Function signature here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 | class NoArg:
   |

```
